fix on scroll overflow issue

--- a/src/Components/ExperienceCard/ExperienceCard.scss
+++ b/src/Components/ExperienceCard/ExperienceCard.scss
@@ -90,8 +90,8 @@
 
 @media screen and (max-width: 600px) {
   .exp-card {
-    width: 21em;
-    height: 32em;
+    width: 20em;
+    height: 30em;
   }
 
   .exp-card-front {
