--- a/src/Components/TechStackComponent/TechStackComponent.scss
+++ b/src/Components/TechStackComponent/TechStackComponent.scss
@@ -62,7 +62,7 @@
     }
 
     li {
-      font-size: 1.5em;
+      font-size: 1.25em;
     }
   }
 }
