--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@ body {
   font-family: 'Questrial', sans-serif, 'Space Grotesk', sans-serif,
     -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(88, 88, 88);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: rgb(88, 88, 88);
+  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
 }
 
 h1,
